# QUANTAXIS

./: .bettercodehub.yml  .cirrus.yml  .gitattributes  .gitignore  .gitmodules  .pylintrc  .pypirc  .sln  .style.yapf  .travis.yml  1.two-sum.2.python3.py  1.two-sum.3.python3.py  7.reverse-integer.python3.py  BACKWARD_COMPATIBILITY_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPATIBILITY_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCS_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE.md  DP.m  DataBase.m  ERROR.md  FINAL_SUMMARY.md  ISSUE_TEMPLATE.md  LICENSE  Makefile  MultiDealer.m  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE5_UPGRADE_REPORT.md  PHASE6_RESOURCE_MANAGER_REPORT.md  PULL_REQUEST_TEMPLATE.md  QA0.txt  QA2.txt  QA3.txt  QAClassPackages.asv  (+70 more)
qapro-rs/: Cargo.toml  cargo.toml  database.yaml  example.toml  readme.md  rustfmt.toml
qapro-rs/examples/: api.rs  backtest.rs  factorAnawithlocalcache.rs  factorlib.rs  factorplayground.rs  getdata.rs  getdataadv.rs  loadcache.rs  makeqfq.rs  qafactor.rs  wsserver.rs
qapro-rs/src/: lib.rs  main.rs  qapraser.rs
qapro-rs/src/parsers/: engine.rs  lang.rs  mod.rs  models.rs  pqlir_parser.rs
qapro-rs/src/parsers/parser/: clauses.rs  elements.rs  expressions.rs  func.rs  keywords.rs  math.rs  mod.rs  select_statement.rs  values.rs
qapro-rs/src/parsers/planner/: drain.rs  eval.rs  filter.rs  logical_plan.rs  mod.rs  project.rs
qapro-rs/src/parsers/sql/: env.rs  eval.rs  expr.rs  field.rs  func.rs  mod.rs  selector.rs  sql.rs  where_cond.rs
qapro-rs/src/parsers/utils/: mod.rs
qapro-rs/src/parsers/value/: json_value.rs  mod.rs  pql_value.rs  pql_vector.rs  table.rs  toml_value.rs
qapro-rs/src/qaaccount/: account.rs  marketpreset.rs  mod.rs  order.rs  position.rs  transaction.rs
qapro-rs/src/qaconnector/: mod.rs
qapro-rs/src/qaconnector/clickhouse/: ckclient.rs  mod.rs
qapro-rs/src/qaconnector/mongo/: mod.rs  mongoclient.rs
qapro-rs/src/qaconnector/parquet/: mod.rs  parquetclient.rs
qapro-rs/src/qaconnector/redis/: mod.rs  redisclient.rs
qapro-rs/src/qadata/: arrowbase.rs  datafunc.rs  mod.rs  resample.rs
qapro-rs/src/qadatastruct/: factorstruct.rs  mod.rs  stockadj.rs  stockday.rs  stocklist.rs
qapro-rs/src/qaenv/: localenv.rs  mod.rs
qapro-rs/src/qaexec/: mod.rs
qapro-rs/src/qafactor/: factorbacktest.rs  mod.rs
qapro-rs/src/qafuncs/: mod.rs
qapro-rs/src/qafuncs/qafactor/: hzfactor.rs  mod.rs
qapro-rs/src/qahandlers/: factorhandler.rs  mod.rs  realtime.rs  state.rs  subunsub.rs  websocket.rs  wshandle.rs
qapro-rs/src/qalog/: log4.rs  mod.rs
qapro-rs/src/qamacros/: macros.rs  mod.rs
qapro-rs/src/qamarket/: mod.rs
qapro-rs/src/qamarket/qahexos/: readme.md
qapro-rs/src/qamarket/qaoms/: mod.rs
qapro-rs/src/qamarket/qareal/: mod.rs
qapro-rs/src/qaprotocol/: mod.rs
qapro-rs/src/qaprotocol/mifi/: market.rs  mifibase.rs  mod.rs  qadatastruct.rs  (+1 more)
qapro-rs/src/qapubsub/: instruct_mq.rs  market_mq.rs  mod.rs
qapro-rs/src/qaruntime/: base.rs  mod.rs  monitor.rs  qacontext.rs
qapro-rs/src/qastrategy/: backtest.rs  mod.rs  qatemplate.rs  t00.rs
qapro-rs/src/qautil/: mod.rs  tradedate.rs
(+2219 files in other folders)
